--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,38 @@ body {
 
 .App {
   text-align: center;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.header {
+  margin: 0px;
+  border: 2mm solid var(--darkberry);
+  display: flex;
+  justify-content: center;
+  background-color: var(--mint);
+}
+
+.header h1 {
+  color: var(--berry);
+  font-family: 'Rubik Vinyl', cursive;
+  font-size: 48px;
+  text-shadow: -1px 0 var(--darkberry), 0 1px var(--darkberry),
+    1px 0 var(--darkberry), 0 -1px var(--darkberry);
+}
+
+.header img {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  margin: 10px;
 }
 
 h2 {
   margin: 25px auto;
-  color: var(--berry);
-  font-family: "Rubik Pixels", cursive;
+  color: var(--darkberry);
   font-size: 62px;
-  text-shadow: -1px 0 var(--darkberry), 0 1px var(--darkberry),
-    1px 0 var(--darkberry), 0 -1px var(--darkberry);
+  text-shadow: -1px 0 var(--berry), 0 1px var(--berry),
+    1px 0 var(--berry), 0 -1px var(--berry);
 }
 
 .review-container {
