--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 
 .App {
   text-align: center;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .header {
@@ -25,7 +25,7 @@ body {
 
 .header h1 {
   color: var(--berry);
-  font-family: 'Rubik Vinyl', cursive;
+  font-family: "Rubik Vinyl", cursive;
   font-size: 48px;
   text-shadow: -1px 0 var(--darkberry), 0 1px var(--darkberry),
     1px 0 var(--darkberry), 0 -1px var(--darkberry);
@@ -42,9 +42,10 @@ h2 {
   margin: 25px auto;
   color: var(--darkberry);
   font-size: 62px;
-  text-shadow: -1px 0 var(--berry), 0 1px var(--berry),
-    1px 0 var(--berry), 0 -1px var(--berry);
+  text-shadow: -1px 0 var(--berry), 0 1px var(--berry), 1px 0 var(--berry),
+    0 -1px var(--berry);
 }
+
 
 .review-container {
   margin: auto;
@@ -61,13 +62,9 @@ h2 {
   height: 450px;
   border: 4mm ridge var(--darkberry);
   overflow: hidden;
-  background-color: var(--berry);
+  background-color: whitesmoke;
   color: black;
   text-decoration: none;
-}
-
-.game-title {
-  padding: 0px 10px;
 }
 
 .review-card img {
@@ -77,10 +74,30 @@ h2 {
   height: 300px;
   object-fit: cover;
   transition: transform 0.2s;
+  z-index: -1;
+}
+
+.review-intro {
+  margin: 0;
+  padding: 0px;
+  position: absolute;
+  width: inherit;
+  z-index: 1;
 }
 
 .review-card:hover img {
   transform: scale(2);
+  opacity: 0.5;
+}
+
+.review-card:hover .review-intro {
+  margin-top: -305px;
+  object-fit: cover;
+  font-size: 240%;
+  z-index: 1;
+  background-color: rgba(255,255,255, 0.3);
+  width: 350px;
+  height: 450px;
 }
 
 a:link {
