--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   --peach: #ffabab;
   --berry: #feb9c8;
   --darkberry: #d14d72;
+  --mainfont: "Noto Sans", sans-serif;
+  --headerfont: "Rubik Vinyl", cursive;
 }
 
 body {
@@ -12,107 +14,9 @@ body {
 
 .App {
   text-align: center;
-  font-family: "Noto Sans", sans-serif;
+  font-family: var(--mainfont);
 }
 
-.header {
-  margin: 0px;
-  border: 2mm solid var(--darkberry);
-  display: flex;
-  justify-content: center;
-  background-color: var(--mint);
-}
-
-.header h1 {
-  color: var(--berry);
-  font-family: "Rubik Vinyl", cursive;
-  font-size: 48px;
-  text-shadow: -1px 0 var(--darkberry), 0 1px var(--darkberry),
-    1px 0 var(--darkberry), 0 -1px var(--darkberry);
-}
-
-.header img {
-  width: 50px;
-  height: 50px;
-  align-self: center;
-  margin: 10px;
-}
-
-h2 {
-  margin: 25px auto;
-  color: var(--darkberry);
-  font-size: 62px;
-  text-shadow: -1px 0 var(--berry), 0 1px var(--berry), 1px 0 var(--berry),
-    0 -1px var(--berry);
-}
-
-
-.review-container {
-  margin: auto;
-  padding-left: 0px;
-  width: 90%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 20px 10px;
-}
-
-.review-card {
-  width: 350px;
-  height: 450px;
-  border: 4mm ridge var(--darkberry);
-  overflow: hidden;
-  background-color: whitesmoke;
-  color: black;
-  text-decoration: none;
-}
-
-.review-card img {
-  padding: 0px;
-  width: 100%;
-  max-width: 400px;
-  height: 300px;
-  object-fit: cover;
-  transition: transform 0.2s;
-  z-index: -1;
-}
-
-.review-intro {
-  margin: 0;
-  padding: 0px;
-  position: absolute;
-  width: inherit;
-  z-index: 1;
-}
-
-.review-card:hover img {
-  transform: scale(2);
-  opacity: 0.5;
-}
-
-.review-card:hover .review-intro {
-  margin-top: -305px;
-  object-fit: cover;
-  font-size: 240%;
-  z-index: 1;
-  background-color: rgba(255,255,255, 0.3);
-  width: 350px;
-  height: 450px;
-}
-
-a:link {
-  text-decoration: none;
-}
-
-a:visited {
-  text-decoration: none;
-  font-weight: 600;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a:active {
-  text-decoration: none;
+#loading {
+  margin-top: 100px;
 }
