--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -1,6 +1,13 @@
-.homepage{
+.homepage-categories{
     width: 100%;
-    margin: 500px 0px;
+    margin: 50px 0px;
+    background-color: hsl(300, 100%, 25%, 40%);
+    position: absolute;
+    padding: 50px 0px;
+}
+.homepage-reviews{
+    width: 100%;
+    margin: 600px 0px;
     background-color: hsl(300, 100%, 25%, 40%);
     position: absolute;
 }
