fixed issue with categories homepage

--- a/src/components/Reviews/HomepageReviews.css
+++ b/src/components/Reviews/HomepageReviews.css
@@ -15,11 +15,12 @@
 
 .reviews h2 {
   position: relative;
-  margin: 22px auto;
+  margin: 20px auto 50px auto;
   color: var(--darkberry);
   font-size: 62px;
   text-shadow: -1px 0 var(--berry), 0 1px var(--berry), 1px 0 var(--berry),
     0 -1px var(--berry);
+  padding-top: 50px;
 }
 
 .more-reviews {
