--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -4,10 +4,16 @@
     background-color: hsl(300, 100%, 25%, 40%);
     /* position: absolute; */
     padding: 50px 0px;
+    box-shadow: 
+    -4px 8px 8px var(--berry), -8px 16px 16px var(--berry),
+    -16px 32px 32px var(--berry), -32px 64px 64px var(--berry);
 }
+
 .homepage-reviews{
     width: 100%;
     margin: 80px 0px;
     background-color: hsl(300, 100%, 25%, 40%);
     /* position: absolute; */
+    box-shadow: -4px 8px 8px var(--berry), -8px 16px 16px var(--berry),
+    -16px 32px 32px var(--berry), -32px 64px 64px var(--berry);
 }
