--- a/src/components/categories/HomepageCategories.css
+++ b/src/components/categories/HomepageCategories.css
@@ -17,14 +17,6 @@
     0 -1px var(--berry);
 }
 
-.category-card {
-  width: 300px;
-  height: 350px;
-  overflow: hidden;
-  color: black;
-  font-size: 1.5em;
-}
-
 a:link {
   text-decoration: none;
 }
@@ -49,4 +41,11 @@ a:active {
   font-size: 24px;
   background-color: var(--berry);
   border: 1mm solid var(--darkberry);
+}
+
+.more-categories:hover {
+  cursor: pointer;
+  font-size: 32px;
+  background-color: var(--darkberry);
+  border: 1mm solid var(--berry);
 }
