--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,27 +1,33 @@
 .header {
-    margin: 0px;
-    border: 2mm solid var(--darkberry);
-    display: flex;
-    justify-content: center;
-    background-color: var(--mint);
-  }
-  
-  .header h1 {
-    color: var(--berry);
-    font-family: var(--headerfont);
-    font-size: 48px;
-    text-shadow: -1px 0 var(--darkberry), 0 1px var(--darkberry),
-      1px 0 var(--darkberry), 0 -1px var(--darkberry);
-  }
-  
-  .header.site-link {
-    width: 50px;
-    height: 50px;
-    align-self: center;
-    margin: 10px;
-  }
-  
-  .header img {
-    width: 80px;
-    height: auto;
-  }
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  background-color: #675d5080;
+  border-bottom: 1mm solid var(--brown);
+  height: 100vh;
+}
+
+.header h1 {
+  color: var(--peach);
+  font-family: var(--headerfont);
+  font-size: 160px;
+  text-shadow: -1px 0 var(--brown), 0 1px var(--brown), 1px 0 var(--brown),
+    0 -1px var(--brown);
+  text-align: left;
+  margin-top: 18.5%;
+  margin-left: 99px;
+}
+
+.header.site-link {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  margin: 10px;
+}
+
+.logo {
+  width: 350px;
+  height: 350px;
+  align-self: center;
+  margin-left: 150px;
+}
