--- a/src/components/Reviews/ReviewCard.css
+++ b/src/components/Reviews/ReviewCard.css
@@ -1,79 +1,85 @@
 .review-card {
-    width: 350px;
+  width: 350px;
+  height: 480px;
+  overflow: hidden;
+  color: black;
+  background-color: whitesmoke;
+  box-shadow: 5px 5px 30px var(--brown);
+  border-radius: 0px 100px;
+  font-size: 1.5em;
+}
+
+.review-card img {
+  padding: 0px;
+  width: 100%;
+  max-width: 400px;
+  height: 300px;
+  object-fit: cover;
+  transition: transform 0.2s;
+}
+
+.review-intro {
+  position: relative;
+  text-align: right;
+  padding-right: 20px;
+  margin-top: 0px;
+}
+
+.review-intro h3 {
+  margin: 5px 0px 10px 0px;
+}
+
+.review-intro p {
+  margin-top: 5px;
+}
+
+.review-card:hover .review-intro {
+  margin-top: -90%;
+  object-fit: cover;
+  font-size: 150%;
+  text-align: center;
+  padding: 10px;
+}
+
+.review-card:hover img {
+  margin-top: 25%;
+  transform: scale(2);
+  opacity: 0.5;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
+@media (max-width: 400px) {
+  .review-card {
+    width: 280px;
     height: 450px;
-    border: 4mm ridge var(--darkberry);
+    border: 4mm ridge var(--brown);
     overflow: hidden;
     background-color: whitesmoke;
     color: black;
     text-decoration: none;
   }
-  
-  .review-card img {
-    padding: 0px;
-    width: 100%;
-    max-width: 400px;
-    height: 300px;
-    object-fit: cover;
-    transition: transform 0.2s;
-    z-index: -1;
-  }
-  
-  .review-intro {
-    margin: 0;
-    padding: 0px;
-    position: absolute;
-    width: inherit;
-    z-index: 1;
-  }
-  
-  .review-card:hover img {
-    transform: scale(2);
-    opacity: 0.5;
-  }
-  
   .review-card:hover .review-intro {
-    margin-top: -305px;
+    width: 280px;
+    font-size: 200%;
     object-fit: cover;
-    font-size: 240%;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.3);
-    width: 350px;
     height: 450px;
   }
-  
-  a:link {
-    text-decoration: none;
-  }
-  
-  a:visited {
-    text-decoration: none;
-    font-weight: 600;
-  }
-  
-  a:hover {
-    text-decoration: none;
-  }
-  
-  a:active {
-    text-decoration: none;
-  }
-  
-  @media (max-width: 400px) {
-    .review-card {
-      width: 280px;
-      height: 450px;
-      border: 4mm ridge var(--darkberry);
-      overflow: hidden;
-      background-color: whitesmoke;
-      color: black;
-      text-decoration: none;
-    }
-    .review-card:hover .review-intro {
-      width: 280px;
-      font-size: 200%;
-      object-fit: cover;
-      z-index: 1;
-      background-color: rgba(255, 255, 255, 0.3);
-      height: 450px;
-    }
-  }
+}
