--- a/src/components/Reviews/ReviewsPage.css
+++ b/src/components/Reviews/ReviewsPage.css
@@ -1,22 +1,22 @@
-.reviews{
-    width: 100%;
-    margin: 0px;
+.reviews {
+  width: 100%;
+  margin: 0px;
 }
 
 .review-container {
-    margin: auto;
-    padding-left: 0px;
-    width: 90%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 20px 10px;
+  margin: auto;
+  padding-left: 0px;
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px 10px;
 }
 
 .reviews h2 {
-    margin: 25px auto;
-    color: var(--darkberry);
-    font-size: 62px;
-    text-shadow: -1px 0 var(--berry), 0 1px var(--berry), 1px 0 var(--berry),
-      0 -1px var(--berry);
-  }
+  margin: 25px auto;
+  color: var(--brown);
+  font-size: 62px;
+  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
+    0 -1px var(--peach);
+}
