--- a/src/components/categories/CategoryCard.css
+++ b/src/components/categories/CategoryCard.css
@@ -5,7 +5,7 @@
   color: black;
   font-size: 1.5em;
   background-color: whitesmoke;
-  box-shadow: 5px 5px 30px var(--darkberry);
+  box-shadow: 5px 5px 30px var(--brown);
   border-radius: 100px 0px;
 }
 
@@ -14,6 +14,7 @@
   text-align: left;
   padding-left: 20px;
   margin-top: 24px;
+  position: relative;
 }
 
 .category-card:hover .category-name {
