--- a/src/components/categories/CategoryCard.css
+++ b/src/components/categories/CategoryCard.css
@@ -1,31 +1,34 @@
 .category-card {
-  width: 300px;
-  height: 350px;
+  width: 200px;
+  height: 290px;
   overflow: hidden;
-  color: black;
-  font-size: 1.5em;
   background-color: whitesmoke;
-  box-shadow: 5px 5px 30px var(--brown);
-  border-radius: 100px 0px;
+  box-shadow: 0px 0px 4px var(--brown);
+  border-radius: 10px 10px;
+  border: 1mm solid var(--brown);
 }
 
 .category-name {
-  color: black;
-  text-align: left;
-  padding-left: 20px;
-  margin-top: 24px;
+  color: var(--brown);
   position: relative;
+  display: flex;
+  justify-content: center;
+  font-size: 22px;
+  margin: 0px;
+  padding-top: 22px;
 }
 
 .category-card:hover .category-name {
-  margin-top: -50%;
+  margin-top: -62%;
   font-size: 208%;
   text-align: center;
   font-weight: 900;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  text-shadow: -1px 0 var(--brown), 0 1px var(--brown), 1px 0 var(--brown),
+    0 -1px var(--brown);
 }
 
 .category-card:hover img {
   transform: scale(2);
   opacity: 0.5;
+  margin-top: 6px;
 }
