--- a/src/components/Reviews/ReviewCard.css
+++ b/src/components/Reviews/ReviewCard.css
@@ -1,4 +1,5 @@
 .review-card {
+  position: relative;
   width: 248px;
   height: 400px;
   overflow: hidden;
@@ -18,13 +19,18 @@
 }
 
 .review-intro {
-  position: relative;
+  position: absolute;
+  top: calc(55.5% + 106px);
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: var(--brown);
+  font-size: 22px;
+  transition: all 0.1s ease-in-out;
+  width: inherit;
 }
 
 .review-intro h4 {
   margin: 14px 6px 12px 5px;
-  font-size: 1.2vw;
 }
 
 .review-intro p {
@@ -33,10 +39,9 @@
 }
 
 .review-card:hover .review-intro {
-  margin-top: -105%;
-  object-fit: cover;
-  text-align: center;
+  top: 50%;
   font-size: 200%;
+  padding: inherit 15px;
 }
 
 .review-card:hover img {
@@ -72,6 +77,11 @@ a:active {
     color: black;
     text-decoration: none;
   }
+  .review-card .review-intro {
+    top: calc(
+      50% + 30px
+    ); /* 30px is the margin between image and .review-intro */
+  }
   .review-card:hover .review-intro {
     width: 280px;
     font-size: 200%;
@@ -79,5 +89,6 @@ a:active {
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.3);
     height: 450px;
+    top: 40%;
   }
 }
