--- a/src/components/categories/CategoryCard.css
+++ b/src/components/categories/CategoryCard.css
@@ -34,8 +34,9 @@
   transform: translate(-50%, -50%);
   text-align: center;
   font-weight: 900;
-  text-shadow: -1px 0 var(--brown), 0 1px var(--brown), 1px 0 var(--brown),
-    0 -1px var(--brown);
+  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
+    0 -1px var(--peach);
+  color: black;
 }
 
 .category-card:hover img {
