--- a/src/components/Reviews/SingularReview.css
+++ b/src/components/Reviews/SingularReview.css
@@ -1,9 +1,70 @@
-/* section .review-box{
-    display: flex;
-    width: 250vw;
-} */
+.review-box {
+  width: 60vw;
+  margin-left: 20.5%;
+}
 
-.review-box p {
-text-align: justify;
-margin: 5vh 16vw;
+.review-section {
+  padding-left: 0px;
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  margin: 30px 0px 14vh 0px;
+  align-content: center;
+  flex-direction: column;
+  box-shadow: 0px 0px 4px var(--brown);
+  border-radius: 10px;
+  border: 1mm solid var(--brown);
+  background-color: whitesmoke;
+  color: var(--brown);
+  font-size: 16px;
+}
+
+.review-section h2 {
+  font-family: var(--headerfont);
+  color: var(--brown);
+  font-size: 32px;
+  margin: 0px;
+  padding: 24px 0px 20px 0px;
+}
+
+.review-section h3 {
+  color: var(--brown);
+  margin: 0px;
+  padding-bottom: 24px;
+  font-size: 16px;
+  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach), 0 -1px var(--peach);
+
+}
+
+.review-body {
+  margin: 30px 40px 0px 40px;
+  text-align: justify;
+  padding: 0px 24px;
+}
+
+.one-line {
+  text-align: right;
+  padding-right: 65px;
+  color: var(--mint);
+}
+
+.vote-button {
+  color: var(--brown);
+  text-align: center;
+  margin-top: 2px;
+  margin-left: 66px;
+  margin-bottom: 38px;
+  background: var(--peach);
+  border: none;
+  font-size: 18px;
+  width: 90px;
+  padding: 8px 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px var(--brown);
+}
+
+.vote-button:hover {
+  box-shadow: 0px 0px 2px var(--brown);
+  cursor: pointer;
 }
