--- a/src/components/Reviews/SingularReview.css
+++ b/src/components/Reviews/SingularReview.css
@@ -16,10 +16,7 @@
 }
 
 .review-header {
-  margin: 16px 50px 16px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  margin: 24px 50px;
 }
 
 .review-section h2 {
@@ -29,13 +26,13 @@
   margin: 0px;
   padding: 0px;
   position: relative;
-  max-width: 350px;
 }
 
 .review-section h3 {
   color: var(--brown);
   text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
     0 -1px var(--peach);
+    margin-top: 6px;
 }
 
 .img-content {
@@ -44,9 +41,15 @@
   flex-wrap: nowrap;
   justify-content: left;
   margin-left: 50px;
+  margin-top: 18px;
 }
 
-.review-section img {
+.img-box{
+  width: 100%;
+  height: 100%;
+
+}
+.img-box img {
   width: 350px;
   border-radius: 10px;
 }
@@ -67,6 +70,7 @@
 .review-body {
   text-align: justify;
   margin-top: 0;
+  width: 573.4px;
 }
 
 .vote-button button {
