--- a/src/components/Reviews/SingularReview.css
+++ b/src/components/Reviews/SingularReview.css
@@ -26,13 +26,13 @@
   margin: 0px;
   padding: 0px;
   position: relative;
+  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
+    0 -1px var(--peach);
 }
 
 .review-section h3 {
   color: var(--brown);
-  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
-    0 -1px var(--peach);
-    margin-top: 6px;
+  margin-top: 6px;
 }
 
 .img-content {
@@ -42,12 +42,12 @@
   justify-content: left;
   margin-left: 50px;
   margin-top: 18px;
+  align-items: center;
 }
 
-.img-box{
+.img-box {
   width: 100%;
   height: 100%;
-
 }
 .img-box img {
   width: 350px;
@@ -58,6 +58,7 @@
   display: flex;
   flex-direction: column;
   margin: 0px 50px;
+  align-self: start;
 }
 
 .one-line {
