--- a/src/components/Reviews/ReviewCard.css
+++ b/src/components/Reviews/ReviewCard.css
@@ -5,7 +5,7 @@
   overflow: hidden;
   background-color: whitesmoke;
   box-shadow: 0px 0px 4px var(--brown);
-  border-radius: 10px ;
+  border-radius: 10px;
   border: 1mm solid var(--brown);
 }
 
@@ -15,7 +15,7 @@
   max-width: 400px;
   height: 275px;
   object-fit: cover;
-  transition: transform 0.1s;
+  transition: all 0.1s ease-in-out;
 }
 
 .review-intro {
@@ -42,8 +42,9 @@
   top: 50%;
   font-size: 210%;
   padding: inherit 15px;
-  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach), 0 -1px var(--peach);
-color: black;
+  text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
+    0 -1px var(--peach);
+  color: black;
 }
 
 .review-card:hover img {
