--- a/src/components/categories/Categories.css
+++ b/src/components/categories/Categories.css
@@ -20,7 +20,7 @@
   max-width: 300px;
   height: 200px;
   object-fit: cover;
-  transition: transform 0.1s;
+  transition: transform 0.1s ease-in-out;
 }
 
 .category-name {
