--- a/src/components/categories/CategoryCard.css
+++ b/src/components/categories/CategoryCard.css
@@ -24,7 +24,7 @@
   max-width: 300px;
   height: 200px;
   object-fit: cover;
-  transition: transform 0.1s;
+  transition: transform 0.1s ease-in-out;
 }
 
 .category-card:hover .category-name {
