--- a/src/components/users/UserCard.css
+++ b/src/components/users/UserCard.css
@@ -14,6 +14,8 @@
   font-family: var(--mainfont);
   text-shadow: -1px 0 var(--peach), 0 1px var(--peach), 1px 0 var(--peach),
     0 -1px var(--peach);
+  z-index: 1;
+  position: relative;
 }
 
 .user-info img {
@@ -24,6 +26,8 @@
   object-fit: contain;
   border-radius: 5%;
   background-color: white;
+  transition: all 0.1s ease-in-out;
+  z-index: 0;
 }
 
 .user-name {
@@ -46,7 +50,15 @@
   font-size: 22px;
 }
 
-.sign-in:hover {
+.login-card:hover {
+  cursor: pointer;
+}
+
+.login-card:hover img {
+  transform: rotate(10deg);
+}
+
+.login-card:hover .sign-in {
   font-size: 32px;
   cursor: pointer;
   padding-top: 0px;
