--- a/src/components/categories/HomepageCategories.css
+++ b/src/components/categories/HomepageCategories.css
@@ -13,13 +13,15 @@
 
 .categories-container {
   padding-left: 0px;
-  margin: auto;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
-  gap: 0px 1vw;
+  flex-wrap: wrap;
+  gap: 20px 11px;
+  margin: auto;
 }
 
-#categories-header {
+#homepage-categories-header {
   font-family: var(--headerfont);
   color: var(--brown);
   font-size: 32px;
@@ -38,21 +40,4 @@
 .more-categories:hover {
   cursor: pointer;
   font-size: 27px;
-}
-
-a:link {
-  text-decoration: none;
-}
-
-a:visited {
-  text-decoration: none;
-  font-weight: 600;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a:active {
-  text-decoration: none;
 }
