--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,20 @@ body {
 #loading {
   margin-top: 100px;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
