--- a/src/components/Reviews/ReviewsPage.css
+++ b/src/components/Reviews/ReviewsPage.css
@@ -15,8 +15,8 @@
 
 .reviews h2 {
   font-family: var(--headerfont);
-color: var(--brown);
-font-size: 32px;
-margin: 0px;
-padding: 24px 0px;
+  color: var(--brown);
+  font-size: 32px;
+  margin: 0px;
+  padding: 40px 0px 24px 0px;
 }
