--- a/src/components/categories/Categories.css
+++ b/src/components/categories/Categories.css
@@ -3,24 +3,29 @@
   margin-left: 20.5%;
 }
 
-.category-card {
-  width: 234px;
-  height: 315px;
+#categories-page-header {
+  font-family: var(--headerfont);
+  color: var(--brown);
+  font-size: 32px;
+  margin: 0px;
+  padding: 40px 0px 24px 0px;
 }
 
 .categories-list {
   padding: 0px;
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 3vh 2vw;
+  margin: 0px 0px 14vh 0px;
 }
 
 .each-category img {
-  width: 101%;
+  width: 100%;
   max-width: 300px;
   height: 200px;
   object-fit: cover;
-  transition: transform 0.1s ease-in-out;
+  transition: transform 0.1s ;
 }
 
 .category-name {
@@ -34,6 +39,7 @@
   opacity: 0.5;
   margin-top: 22px;
 }
+
 .category-card:hover .category-name {
   padding: 25px 20px;
   font-size: 36px;
