--- a/src/components/categories/CategoryPage.css
+++ b/src/components/categories/CategoryPage.css
@@ -3,19 +3,12 @@
   margin-left: 20.5%;
 }
 
-.category-page h3 {
+.category-page h2 {
   font-family: var(--headerfont);
   color: var(--brown);
   font-size: 32px;
   margin: 0px;
-  padding: 24px 0px 8px 0px;
-}
-
-.category-page h4 {
-  color: var(--brown);
-  font-size: 18px;
-  margin: 0px;
-  padding: 0;
+  padding: 40px 0px 24px 0px
 }
 
 .review-box {
@@ -24,6 +17,6 @@
   flex-wrap: wrap;
   gap: 3vh 1vw;
   width: 100%;
-  margin: 30px 0px;
+  margin: 0px 0px 14vh 0px;
   justify-content: center;
 }
