--- a/src/components/comments/Comments.css
+++ b/src/components/comments/Comments.css
@@ -3,13 +3,13 @@
 }
 
 .comments-list {
-  margin: 4vh 0;
-  padding: 0;
   display: flex;
-  gap: 4vh;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 100%;
+  margin: 40px 0;
+  padding: 10px 0;
+  box-shadow: 0px 0px 4px var(--brown);
+  border-radius: 10px;
+  border: 1mm solid var(--brown);
+  background-color: whitesmoke;
   color: var(--brown);
 }
 
@@ -21,7 +21,7 @@
   padding: 0px 0px 24px 0px;
 }
 
-#no-comments{
+#no-comments {
   padding-left: 32px;
-  font-size: 20px; 
+  font-size: 20px;
 }
