--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,20 @@ body {
   font-family: var(--mainfont);
 }
 
+.to-top-button{
+ 
+  color: var(--brown);
+text-align: center;
+background: var(--peach);
+border: none;
+font-size: 18px;
+width: -moz-fit-content;
+width: fit-content;
+padding: 8px 24px;
+border-radius: 10px;
+box-shadow: 0px 0px 6px var(--brown);
+}
+
 #loading {
   margin-top: 100px;
 }
