--- a/src/components/comments/Comments.css
+++ b/src/components/comments/Comments.css
@@ -6,11 +6,8 @@
   display: flex;
   margin: 40px 0;
   padding: 10px 0;
-  box-shadow: 0px 0px 4px var(--brown);
-  border-radius: 10px;
-  border: 1mm solid var(--brown);
-  background-color: whitesmoke;
-  color: var(--brown);
+  flex-direction: column;
+  gap: 20px;
 }
 
 .comments h4 {
@@ -22,6 +19,13 @@
 }
 
 #no-comments {
-  padding-left: 32px;
   font-size: 20px;
+  display: flex;
+  margin: 40px 0;
+  padding: 40px;
+  box-shadow: 0px 0px 4px var(--brown);
+  border-radius: 10px;
+  border: 1mm solid var(--brown);
+  background-color: whitesmoke;
+  color: var(--brown);
 }
