--- a/src/components/Homepage/Footer.css
+++ b/src/components/Homepage/Footer.css
@@ -1,5 +1,46 @@
-.social-media img {
-  width: 25px;
-  margin: 20px;
-  /* height: 50px; */
+.footer {
+  background-color: var(--peach);
+  height: -moz-fit-content;
+  height: fit-content;
+  padding-bottom: 20px;
+}
+
+.text-footer {
+  background-color: var(--brown);
+  color: var(--peach);
+  position: relative;
+  text-align: left;
+  padding: 15px 0 15px 21%;
+}
+
+.social-media {
+  display: flex;
+  align-content: center;
+  justify-content: flex-end;
+  width: 60vw;
+  margin-left: 20.5%;
+}
+
+.link-card {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    background-color: whitesmoke;
+    box-shadow: 0px 0px 4px var(--brown);
+    border-radius: 10px;
+    border: 1mm solid var(--brown);
+    margin-left: 20px;
+}
+
+.link-card img {
+    width: 80%;
+    object-fit: contain;
+    transition: all 0.1s ease-in-out;
+    padding: 10%;
+}
+
+.link-card img:hover {
+  width: 100%;
+  padding: 0;
 }
