--- a/src/components/Homepage/ScrollToTop.css
+++ b/src/components/Homepage/ScrollToTop.css
@@ -15,7 +15,7 @@
   padding: 18px;
   transition: opacity 0.1s ease-in-out;
   border-radius: 10px 10px 0 0;
-  box-shadow: 0px 0px 10px var(--brown);
+  box-shadow: 0px 0px 1px var(--peach);
 }
 
 .scroll-button button:hover {
