--- a/src/components/categories/CategoryPage.css
+++ b/src/components/categories/CategoryPage.css
@@ -1,6 +1,7 @@
 .category-page {
   width: 60vw;
   margin-left: 20.5%;
+  min-height: 60vh;
 }
 
 .category-page h2 {
@@ -17,6 +18,6 @@
   flex-wrap: wrap;
   gap: 3vh 1vw;
   width: 100%;
-  margin: 0px 0px 14vh 0px;
+  margin: 0px 0px 4vh 0px;
   justify-content: center;
 }
