--- a/src/components/comments/Comments.css
+++ b/src/components/comments/Comments.css
@@ -4,7 +4,7 @@
 
 .comments-list {
   display: flex;
-  margin: 40px 0;
+  margin: 40px 0 0 0;
   padding: 10px 0;
   flex-direction: column;
   gap: 20px;
