--- a/src/components/comments/NewComment.css
+++ b/src/components/comments/NewComment.css
@@ -14,7 +14,7 @@
   align-self: flex-start;
 }
 
-#new-comment {
+.new-comment {
   width: -moz-available;
   border: 1mm solid var(--brown);
   border-radius: 10px;
@@ -24,7 +24,7 @@
   font-size: 16px;
 }
 
-#new-comment:focus {
+.new-comment:focus {
   border: 1mm solid var(--peach);
   outline: none;
   color: var(--brown);
@@ -42,4 +42,38 @@
   border: none;
   border-radius: 10px;
   box-shadow: 0px 0px 6px var(--brown);
+}
+
+.success-message {
+  color: #799351;
+  text-align: left;
+  padding-left: 2px;
+  margin-top: -12px;
+}
+
+.success {
+  border: 1mm solid #799351;
+  background: #79935110;
+}
+
+.success::placeholder {
+  opacity: 0.7;
+  color: #799351;
+}
+
+.error-message {
+  color: #A20A0A;
+  text-align: left;
+  padding-left: 2px;
+  margin-top: -12px;
+}
+
+.error {
+  border: 1mm solid #A20A0A;
+  background: #A20A0A10;
+}
+
+.error::placeholder {
+  opacity: 0.7;
+  color: #A20A0A;
 }
