--- a/src/components/users/UserCard.css
+++ b/src/components/users/UserCard.css
@@ -1,14 +1,18 @@
-.user-image-container {
+.login-card {
+  border: 1mm solid var(--brown);
+  border-radius: 10px;
+  width: 195px;
+  height: 290px;
+  overflow: hidden;
+  background: white;
+  color: var(--brown);
+  box-shadow: 0px 0px 4px var(--brown);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  width: 200px;
-  padding-bottom: 100%;
-  height: 0px;
+  flex-flow: column nowrap;
+  justify-content: space-between;
 }
 
-.user-info h3 {
+.login-card h3 {
   margin: 8px;
   font-size: 24px;
   font-family: var(--mainfont);
@@ -19,29 +23,33 @@
   transition: all 0.1s ease-in-out;
 }
 
-.user-info img {
+.user-image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 200px;
+  padding-bottom: 100%;
+  height: 0px;
+}
+
+.user-image-container img {
   width: 100%;
   height: 100%;
   position: absolute;
-  left: 0;
   object-fit: contain;
-  border-radius: 5%;
-  background-color: white;
   transition: all 0.1s ease-in-out;
   z-index: 0;
-}
-
-.user-name {
-  margin-top: 5px;
 }
 
 .button-section {
   background-color: var(--brown);
   height: 50px;
-  position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  z-index: 1;
 }
 
 .sign-in {
@@ -60,13 +68,14 @@
   transform: rotate(10deg);
 }
 
-.login-card:hover .sign-in {
+.login-card:hover button {
   font-size: 32px;
   cursor: pointer;
   padding-top: 0px;
 }
 
-.user-info:hover h3 {
-  font-size: 27px;
-  margin: 4px 0 4px 0;
+.login-card:hover h3 {
+  font-size: 26px;
+  margin-left: 0;
+  margin-right: 0;
 }
