--- a/src/components/comments/NewComment.css
+++ b/src/components/comments/NewComment.css
@@ -31,17 +31,27 @@
 }
 
 .post-comment button {
+  width: 150px;
+  height: 40px;
+  padding: 0;
+  margin: 26px 44% 10px 44%;
   background: var(--peach);
   color: var(--brown);
-  margin: 26px 44% 10px 44%;
-  padding: 8px 20px;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-size: 18px;
   text-align: center;
+  font-size: 18px;
   border: none;
   border-radius: 10px;
-  box-shadow: 0px 0px 6px var(--brown);
+  box-shadow: 0px 0px 5px var(--brown);
+}
+
+.post-comment button:hover:not(.disabled) {
+  box-shadow: 0px 0px 2px var(--brown);
+  cursor: pointer;
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
 }
 
 .success-message {
@@ -62,18 +72,18 @@
 }
 
 .error-message {
-  color: #A20A0A;
+  color: #a20a0a;
   text-align: left;
   padding-left: 2px;
   margin-top: -12px;
 }
 
 .error {
-  border: 1mm solid #A20A0A;
-  background: #A20A0A10;
+  border: 1mm solid #a20a0a;
+  background: #a20a0a10;
 }
 
 .error::placeholder {
   opacity: 0.7;
-  color: #A20A0A;
+  color: #a20a0a;
 }
