--- a/src/components/comments/NewComment.css
+++ b/src/components/comments/NewComment.css
@@ -30,7 +30,7 @@
   color: var(--brown);
 }
 
-.post-comment button {
+.post-comment .button {
   width: 150px;
   height: 40px;
   padding: 0;
@@ -42,9 +42,10 @@
   border: none;
   border-radius: 10px;
   box-shadow: 0px 0px 5px var(--brown);
+  line-height: 40px;
 }
 
-.post-comment button:hover:not(.disabled) {
+.post-comment .button:hover:not(.disabled) {
   box-shadow: 0px 0px 2px var(--brown);
   cursor: pointer;
 }
