--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 :root {
-  --mint: #ABC4AA;
-  --lightbrown: #A9907E;
-  --brown: #675D50;
-  --peach: #F3DEBA;
+  --mint: #abc4aa;
+  --lightbrown: #a9907e;
+  --brown: #675d50;
+  --peach: #f3deba;
   --mainfont: "Noto Sans", sans-serif;
   --headerfont: "Rubik Vinyl", cursive;
 }
@@ -17,18 +17,17 @@ body {
   font-family: var(--mainfont);
 }
 
-.to-top-button{
- 
+.to-top-button {
   color: var(--brown);
-text-align: center;
-background: var(--peach);
-border: none;
-font-size: 18px;
-width: -moz-fit-content;
-width: fit-content;
-padding: 8px 24px;
-border-radius: 10px;
-box-shadow: 0px 0px 6px var(--brown);
+  text-align: center;
+  background: var(--peach);
+  border: none;
+  font-size: 18px;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 8px 24px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px var(--brown);
 }
 
 #loading {
