--- a/src/components/users/LogOut.css
+++ b/src/components/users/LogOut.css
@@ -25,15 +25,15 @@
 .logout-page button p {
   color: var(--brown);
   font-size: 18px;
-  text-align: center;
+  margin: 0;
 }
 
 .logout-page button {
+  width: 150px;
+  height: 40px;
   background: var(--peach);
   border: none;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 0px 24px;
+  padding: 0px;
   border-radius: 10px;
   box-shadow: 0px 0px 6px var(--brown);
 }
