--- a/src/components/users/LoggedIn.css
+++ b/src/components/users/LoggedIn.css
@@ -16,7 +16,7 @@
   padding: 10px 0px 0px 0px;
 }
 
-h3 {
+.loggedIn-page h3 {
   margin: 30px 0 0 0;
 }
 
@@ -46,14 +46,13 @@ h3 {
 }
 
 .logout-button {
+  width: 150px;
+  height: 40px;
   color: var(--brown);
-  text-align: center;
   background: var(--peach);
   border: none;
   font-size: 22px;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 8px 20px;
+  padding: 0px;
   border-radius: 10px;
   box-shadow: 0px 0px 6px var(--brown);
 }
